# crossy-road

./: .gitignore  PROMPT_HISTORY.txt  README.md  pyproject.toml
src/crossy/: __init__.py  config.py  game.py  main.py  obstacles.py  player.py  terrain.py
